--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "gatsby-plugin-postcss": "^2.1.21",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.4.3",
+    "gatsby-remark-prismjs": "^3.3.34",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-remark": "^2.6.57",
     "gatsby-transformer-sharp": "^2.3.13",
+    "prismjs": "^1.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
