Add master branch filter to deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,7 @@
-on: push
+on:
+  push:
+    branches:
+      - master
 name: Deploy website
 jobs:
   build:
@@ -21,7 +24,7 @@ jobs:
       - uses: AEnterprise/rsync-deploy@v1.0
         env:
           DEPLOY_KEY: ${{ secrets.SERVER_SSH_KEY }}
-          ARGS: '-e -c -r --delete'
+          ARGS: '-hrvz --delete'
           SERVER_PORT: ${{ secrets.SERVER_PORT }}
           FOLDER: './public'
           SERVER_IP: ${{ secrets.SERVER_IP }}
