--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "tailwindcss": "^1.2.0"
+    "tailwindcss": "^1.2.0",
+    "wasm-twitter-card": "^0.3.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
