--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "autoprefixer": "^9.8.6",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
-    "gatsby-plugin-disqus": "^1.2.2",
+    "gatsby-plugin-emoji-favicon": "^1.5.0",
     "gatsby-plugin-feed": "^2.3.28",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
