--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "wasm-twitter-card": "^0.3.0"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "slug": "^5.1.0"
   },
   "keywords": [
     "gatsby"
@@ -44,6 +45,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "new": "node ./scripts/newpost.js",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "repository": {
