--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "luisramos.dev",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "description": "Luis Ramos personal blog luisramos.dev",
+  "version": "1.0.0",
+  "author": "Luis Ramos <luis.ramos@hey.com>",
   "dependencies": {
     "autoprefixer": "^9.8.6",
     "gatsby": "^2.19.7",
