--- a/package.json
+++ b/package.json
@@ -5,34 +5,36 @@
   "version": "1.0.0",
   "author": "Luis Ramos <luis.ramos@hey.com>",
   "dependencies": {
-    "autoprefixer": "^9.8.6",
-    "gatsby": "^2.19.7",
-    "gatsby-image": "^2.2.39",
+    "autoprefixer": "^10.4.12",
+    "gatsby": "^4.23.1",
     "gatsby-plugin-emoji-favicon": "^1.5.0",
-    "gatsby-plugin-feed": "^2.3.28",
-    "gatsby-plugin-manifest": "^2.2.39",
-    "gatsby-plugin-offline": "^3.0.32",
-    "gatsby-plugin-postcss": "^2.3.13",
-    "gatsby-plugin-react-helmet": "^3.1.21",
-    "gatsby-plugin-sharp": "^2.4.3",
-    "gatsby-plugin-sitemap": "^2.3.1",
-    "gatsby-remark-images": "^3.3.30",
-    "gatsby-remark-prismjs": "^3.3.34",
-    "gatsby-source-filesystem": "^2.1.46",
-    "gatsby-transformer-remark": "^2.6.57",
-    "gatsby-transformer-sharp": "^2.3.13",
-    "postcss": "^7.0.35",
-    "prismjs": "^1.19.0",
+    "gatsby-plugin-feed": "^4.23.1",
+    "gatsby-plugin-image": "^2.23.1",
+    "gatsby-plugin-manifest": "^4.23.1",
+    "gatsby-plugin-offline": "^5.23.1",
+    "gatsby-plugin-postcss": "^5.23.0",
+    "gatsby-plugin-react-helmet": "^5.23.0",
+    "gatsby-plugin-sharp": "^4.23.1",
+    "gatsby-plugin-sitemap": "^5.23.1",
+    "gatsby-remark-images": "^6.23.1",
+    "gatsby-remark-prismjs": "^6.23.0",
+    "gatsby-source-filesystem": "^4.23.0",
+    "gatsby-transformer-remark": "^5.23.1",
+    "gatsby-transformer-sharp": "^4.23.1",
+    "jimp": "^0.14.0",
+    "path": "^0.12.7",
+    "postcss": "^8.4.16",
+    "prismjs": "^1.29.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "tailwindcss": "^2.0.1-compat",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-helmet": "^6.1.0",
+    "tailwindcss": "^3.1.8",
     "wasm-twitter-card": "^0.3.0"
   },
   "devDependencies": {
-    "prettier": "^1.19.1",
-    "slug": "^5.1.0"
+    "prettier": "^2.7.1",
+    "slug": "^5.3.0"
   },
   "keywords": [
     "gatsby"
